@@ -1,6 +1,6 @@
 [tox]
 distshare={homedir}/.tox/distshare
-envlist=py26,py27,bare
+envlist=py26,py27,bare,supervisor
 indexserver=
     pypi = https://pypi.python.org/simple
     #testrun = http://pypi.testrun.org
@@ -19,6 +19,20 @@ deps=
 # we want to see if things work without dependencies
 deps=  
 commands = devpi-server -h
+
+[testenv:supervisor]
+# requires network
+deps= supervisor
+      
+commands = 
+    devpi-server --gendeploy --port 3400
+    supervisord
+    supervisorctl status
+    sleep 1
+    supervisorctl status
+    pip install -i http://localhost:3400/ext/pypi/simple/ --no-install pytest
+    supervisorctl shutdown
+    rm -rf etc
 
 
 [pytest]
